k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: bhoklagyo
  labels:
    app.kubernetes.io/part-of: bhoklagyo
    app.kubernetes.io/managed-by: kubectl
